[package]
name = "debruijn"
version = "0.3.1"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"
edition = '2018'

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
smallvec = "*"
bit-set = "0.5.1"
itertools = ">=0.7"
byteorder = "*"
num = "0.2"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
pretty_assertions = "0.5"
rand = "0.5"

[dependencies.boomphf]
version = "0.5"
features = ["serde"]
