[package]
name = "debruijn"
version = "0.3.2"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"
edition = '2018'
description = "Tools for DNA sequences: efficient k-mer manipulation, De Bruijn graph construction and compaction and handling of DNA strings"
documentation = "https://docs.rs/debruijn"
repository = "https://github.com/10XGenomics/rust-debruijn/"
keywords = ["dna", "sequencing", "kmer", "debruijn", "graph"]
readme = "README.md"


[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
smallvec = "1"
bit-set = "0.5.1"
itertools = ">=0.7"
num = ">=0.2, ^0.3"
log = "0.4"

[dev-dependencies]
pretty_assertions = "0.5"
rand = "0.5"

[dependencies.boomphf]
version = "0.5"
features = ["serde"]
