[package]
name = "debruijn"
version = "0.3.4"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"
edition = '2021'
description = "Tools for DNA sequences: efficient k-mer manipulation, De Bruijn graph construction and compaction and handling of DNA strings"
documentation = "https://docs.rs/debruijn"
repository = "https://github.com/10XGenomics/rust-debruijn/"
keywords = ["dna", "sequencing", "kmer", "debruijn", "graph"]
readme = "README.md"


[dependencies]
num-traits=">=0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
smallvec = "1"
bit-set = "0.5.1"
itertools = ">=0.7"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.3"
rand = "0.8"

[dependencies.boomphf]
version = "0.6"
features = ["serde"]
